# tactile_objrec

./: CMakeLists.txt
app/: CMakeLists.txt
app/are_bkp/conf/: hand_sequences_left.ini  hand_sequences_right.ini
app/fingersModel/: CMakeLists.txt
app/grasper/: CMakeLists.txt
app/grasper/lua/: dump_controller.lua  dump_controller_explore.lua  dump_controller_weigh.lua  event_monitor.lua  label_monitor.lua
app/grasper/scripts/icub/: grasping.xml
app/grasper/scripts/sim/: grasping_sim.xml
app/scripts/: data_monitor.lua  dump_controller.lua  dumpers.xml  event_monitor.lua  grasping.xml
app/scripts/icub/: grasping.xml
app/scripts/sim/: grasping_sim.xml
src/: CMakeLists.txt
src/are/actionsRenderingEngine/: CMakeLists.txt
src/are/actionsRenderingEngine/include/iCub/: MotorThread.h
src/are/actionsRenderingEngine/src/: MotorThread.cpp  main.cpp
src/are/app/: config.ini  hand_sequences.ini
src/are_bkp/: CMakeLists.txt  MotorThread.cpp  MotorThread.h  VisuoThread.cpp  VisuoThread.h  main.cpp  utils.cpp
src/fingersModel/: CMakeLists.txt  fingers_model_module.cpp  fingers_model_module.h  fingers_model_thread.cpp  fingers_model_thread.h  main.cpp
src/grasper/: CMakeLists.txt  grasperModule.cpp  grasperModule.h  grasperThread.cpp  grasperThread.h  grasper_module.cpp  grasper_module.h  grasper_thread.cpp  grasper_thread.h  main.cpp
